# NibbaClothez

./: .env  README.md  main.py  pyproject.toml  run-seed.bat  run-seed.ps1  seed_data.py
src/: main.py  test_flet.py
src/controllers/: MensajeController.py  PrendaController.py  TareaController.py  UserController.py
src/database/: init_db.py  limpiar_db.py  nibba_clothez.sql  seed_data.py  setup_db.py
src/models/: MensajeModel.py  PrendaModel.py  TareasModel.py  UsersModel.py  databaseModel.py  schemasModel.py
src/views/: ChatView.py  LoginView.py  MensajesView.py  PerfilVendedorView.py  PrendaDetalleView.py  RecuperarView.py  RegistroView.py  UserView.py  dashboardView.py  vistaDeCasa.py
